# TP_AP_c-cpp

./: .gitignore  README.md
.ci/: gen-html-report.py  iif.sh
.github/workflows/: cmake.yml  coverage_valgrind_tests.yml
DZ_1/lib/decimal-to-roman/: decimal-to-roman.cpp  decimal-to-roman.hpp
IZ_1/: CMakeLists.txt  main.c  main.cpp
IZ_1/lib/decimal-to-roman/: decimal-to-roman.c  decimal-to-roman.cpp  decimal-to-roman.h  decimal-to-roman.hpp
IZ_1/tests/: TestFuncs.cpp
IZ_2/: CMakeLists.txt  main.c  make_file.py
IZ_2/lib/counting-numbers_c/: counting-numbers_c.c  counting-numbers_c.h
IZ_2/lib/counting-numbers_p/: counting-numbers_p.c  counting-numbers_p.h
IZ_2/tests/: TestFuncs.cpp
